GH-Pages - Fixed vertical alignment of text in zone

--- a/docs/assets/css/styles.scss
+++ b/docs/assets/css/styles.scss
@@ -136,6 +136,7 @@ body {
         margin:6px;
 
         font-size:26px;
+        line-height:26px;
         color:#000000;
 
         background:#ffd800;
